--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Idle Status
+author=Christley
+description=Shows current idle status, how long you've idled (in ticks), and percentage over the login session.
+tags=idle, status, timer, tracking
+plugins=com.idlestatus.IdleStatusPlugin
